@@ -4,6 +4,10 @@ CHANGE LOG
 
 2011-01-11 Jason Vertrees <Jason.Vertrees@schrodinger.com>
 
+	* mol2 multi-state save bugfix
+
+2011-01-11 Jason Vertrees <Jason.Vertrees@schrodinger.com>
+
 	* added mol2.py
 	* File->Save Moleulce
 
